More interface stuff.

--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -981,7 +981,9 @@
    "source": [
     "# Multiple Inheritance\n",
     "\n",
-    "You can only inherit from __one class__ but you can implement __unlimited interfaces__."
+    "You can only inherit from __one class__ but you can implement __unlimited interfaces__.\n",
+    "\n",
+    "Use __comma__ to implement multiple interfaces: `class MyClass extends BaseClass implements Interface1, Interface2 {}`"
    ]
   },
   {
@@ -1953,9 +1955,170 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e26c66c4",
+   "metadata": {},
+   "source": [
+    "# Interface Method Name Collisions\n",
+    "\n",
+    "- if two abstract methods in two interfaces have the __same signature__, then they __cannot be disambiguated__ (and don't need to be).  One implementation counts for both.\n",
+    "- if two __default methods__ in two interfaces have the same signature, the collision needs to be __resolved by the implemeting class__\n",
+    "    - overriding the method __replaces both__ interface default methods no matter which interface is used\n",
+    "    - if you want to call one or both of the interface versions, use the syntax `InterfaceName.super.fn()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "d60a19dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MyClass f\n",
+      "MyClass f\n",
+      "MyClass f\n",
+      "\n",
+      "MyClass g\n",
+      "Interface 1 g\n",
+      "MyClass g\n",
+      "Interface 1 g\n",
+      "MyClass g\n",
+      "Interface 1 g\n"
+     ]
+    }
+   ],
+   "source": [
+    "interface Interface1 {\n",
+    "    void f();\n",
+    "    \n",
+    "    default void g() {\n",
+    "        System.out.println(\"Interface 1 g\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "interface Interface2 {\n",
+    "    void f();\n",
+    "    \n",
+    "    default void g() {\n",
+    "        System.out.println(\"Interface 2 g\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class MyClass implements Interface1, Interface2 {\n",
+    "    // This is used for both Interface1 and Interface2\n",
+    "    // because the signatures match.\n",
+    "    @Override\n",
+    "    public void f() {\n",
+    "        System.out.println(\"MyClass f\");\n",
+    "    }\n",
+    "\n",
+    "    // This is used instead of the default for both interfaces.\n",
+    "    @Override\n",
+    "    public void g() {\n",
+    "        System.out.println(\"MyClass g\");\n",
+    "        // Calling into a specific default method.\n",
+    "        Interface1.super.g();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class InterfaceCollisionDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        MyClass m = new MyClass();\n",
+    "        Interface1 i1 = m;\n",
+    "        Interface2 i2 = m;\n",
+    "        \n",
+    "        i1.f();\n",
+    "        i2.f();\n",
+    "        m.f();\n",
+    "        \n",
+    "        System.out.println();\n",
+    "        \n",
+    "        // These will all use the MyClass version\n",
+    "        // which delegates to the Interface1 version.\n",
+    "        i1.g();\n",
+    "        i2.g();\n",
+    "        m.g();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "InterfaceCollisionDemo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d6f357f",
+   "metadata": {},
+   "source": [
+    "# Partial Interface Implementation\n",
+    "\n",
+    "- You have to implement __all interface members__ for a concrete class\n",
+    "- For an __abstract class__, you can leave them for a subclass to provide\n",
+    "    - can specify the method as abstract or just leave it out\n",
+    "- A concrete class has to have all abstract members filled in to even be declarable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "63fa8137",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "interface MyInterface {\n",
+    "    void f();\n",
+    "    void g();\n",
+    "}\n",
+    "\n",
+    "/* This class is illegal because it leaves out g()\n",
+    "class MyClass implements MyInterface {\n",
+    "    public void f();\n",
+    "    \n",
+    "    // Missing g(), which is a deal-breaker.\n",
+    "}\n",
+    "*/\n",
+    "\n",
+    "abstract class MyClass implements MyInterface {\n",
+    "    public void f() {}\n",
+    "    \n",
+    "    // OK to leave out g() because abstract class\n",
+    "}\n",
+    "\n",
+    "abstract class MyClass2 implements MyInterface {\n",
+    "    public void f() {}\n",
+    "    \n",
+    "    // Means same thing as leaving it out, but makes\n",
+    "    // it more explicit.\n",
+    "    public abstract void g();\n",
+    "}\n",
+    "\n",
+    "class SubClass extends MyClass {\n",
+    "    // Needed because not abstract\n",
+    "    public void g() {}\n",
+    "}\n",
+    "\n",
+    "class SubClass2 extends MyClass {\n",
+    "    // Needed because not abstract\n",
+    "    public void g() {}\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0fb12fea",
+   "metadata": {},
+   "source": [
+    "# Name Hiding\n",
+    "\n",
+    "There is nothing like the C++ concept of name hiding in Java. __All methods are virtual__ no matter what base class or interface you use to call them."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b88bc4ae",
+   "id": "74b1de29",
    "metadata": {},
    "outputs": [],
    "source": []
