Adding more items per more studies.

--- a/java/Classes.ipynb
+++ b/java/Classes.ipynb
@@ -1001,7 +1001,9 @@
     "\n",
     "3. Example 3 showcases overriding the `hashCode()` method to generate a unique hash code for each `Book` object. The default implementation of `hashCode()` returns the object's memory address. In the `Book` class, we override `hashCode()` to calculate a hash code based on the book's title and author.\n",
     "\n",
-    "By overriding these methods, we can provide custom behavior for our classes and make them more meaningful and usable in various scenarios."
+    "By overriding these methods, we can provide custom behavior for our classes and make them more meaningful and usable in various scenarios.\n",
+    "\n",
+    "Note: some methods you'd expect from other languages that aren't here include operators, truthiness, etc."
    ]
   },
   {
@@ -2116,9 +2118,64 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1e3770ba",
+   "metadata": {},
+   "source": [
+    "# Covariant Return Types\n",
+    "\n",
+    "A covariant return type means that when you override a method, the child class's overridden method can return a subclass of the return type specified by the parent class's method.\n",
+    "\n",
+    "In this example, the giveBirth method in the Animal class returns an instance of Animal. However, in the Mammal subclass, we've overridden the giveBirth method to return an instance of Mammal, which is a subclass of Animal. This is an example of a covariant return type.\n",
+    "\n",
+    "It's a handy feature when you want the overridden method in the subclass to provide a more specific type than what the parent class's method provides."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "d040177c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mammal gives birth\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Animal {\n",
+    "    Animal giveBirth() {\n",
+    "        System.out.println(\"Animal gives birth\");\n",
+    "        return new Animal();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Mammal extends Animal {\n",
+    "    // This overridden method returns Mammal, which is a subclass of Animal\n",
+    "    @Override\n",
+    "    Mammal giveBirth() {\n",
+    "        System.out.println(\"Mammal gives birth\");\n",
+    "        return new Mammal();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        Mammal mammal = new Mammal();\n",
+    "        mammal.giveBirth();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74b1de29",
+   "id": "3c30c6d9",
    "metadata": {},
    "outputs": [],
    "source": []
