--- a/java/Collections.ipynb
+++ b/java/Collections.ipynb
@@ -1896,11 +1896,13 @@
    "id": "5841d649",
    "metadata": {},
    "source": [
-    "# List, Set, Map Members\n",
+    "# List, Set, Map, String, Arrays Members\n",
     "\n",
     "- https://docs.oracle.com/javase/8/docs/api/java/util/List.html\n",
     "- https://docs.oracle.com/javase/8/docs/api/java/util/Set.html\n",
-    "- https://docs.oracle.com/javase/8/docs/api/java/util/Map.html"
+    "- https://docs.oracle.com/javase/8/docs/api/java/util/Map.html\n",
+    "- https://docs.oracle.com/javase/8/docs/api/java/lang/String.html\n",
+    "- https://docs.oracle.com/javase/8/docs/api/java/lang/Arrays.html"
    ]
   },
   {
