--- a/java/Functions.ipynb
+++ b/java/Functions.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "3ed69357",
    "metadata": {},
    "outputs": [
@@ -233,6 +233,9 @@
     "        // Expected output: Hello, Alice\n",
     "\n",
     "        // Calling the method with both required and optional arguments\n",
+    "        // NOTE: the arg is assumed to be not null.\n",
+    "        // If it might be null, use Optional.ofNullable() so that null\n",
+    "        // will become empty.\n",
     "        greet(\"Bob\", Optional.of(\"How are you?\"));\n",
     "        // Expected output: Hello, Bob. How are you?\n",
     "        \n",
@@ -348,6 +351,9 @@
     "- The third `display` method takes a double parameter.\n",
     "- The fourth `display` method takes two integer parameters.\n",
     "- The fifth `display` method demonstrates variable number of parameters using the ellipsis (`...`) syntax.\n",
+    "- A couple of `static` methods are shown to demonstrate the following:\n",
+    "    - you can overload between static and non-static with the same name\n",
+    "    - but a static and non-static one cannot have the same signature (which is counterintuitive)\n",
     "\n",
     "In the `main` method, we create an instance of `OverloadingExample` and call each of the `display` methods with different parameter combinations. The expected output is shown as comments next to each method call.\n",
     "\n",
@@ -356,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "dc442182",
    "metadata": {},
    "outputs": [
@@ -403,6 +409,12 @@
     "        }\n",
     "        System.out.println();\n",
     "    }\n",
+    "    \n",
+    "    // ERROR\n",
+    "    // public static void display() {}\n",
+    "    \n",
+    "    // OK\n",
+    "    public static void display(int num1, int num2, int num3) {}\n",
     "\n",
     "    public static void main(String[] args) {\n",
     "        OverloadingExample example = new OverloadingExample();\n",
