--- a/java/Generics, Templates.ipynb
+++ b/java/Generics, Templates.ipynb
@@ -638,9 +638,171 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bac7cf58",
+   "metadata": {},
+   "source": [
+    "# Covariance/Contravariance\n",
+    "\n",
+    "The notation `<? super T>` (__contravariant__) is most useful when you want to ensure that a collection can accept values of a certain type T or its subtypes, without necessarily caring about the exact type of the collection. This becomes especially useful in methods that are consumers — that is, methods that take values and put them into the collection.\n",
+    "\n",
+    "In this example, the addNumbers method is designed to add both Integer and Double values to any list that is designed to hold Number objects or their superclasses.\n",
+    "\n",
+    "So, <? super Number> is useful because:\n",
+    "\n",
+    "It allows you to add items of type Number or its subtypes to the list.\n",
+    "You don't care about the exact type of the list as long as it's a Number or a superclass of Number.\n",
+    "\n",
+    "Contrarily, if the method was defined using `<? extends Number>` (__covariance__), the method could read from the list and be sure about getting a Number or its subtype, but it wouldn't be able to add any new items to the list.\n",
+    "\n",
+    "To put it a different way:\n",
+    "- `<? extends Number>` means we don't know what the type is, but we know it is a subclass of Number\n",
+    "    - because we don't know what the type is, then trying to pass one in (as in `list.add` is not type-safe and thus is an error)\n",
+    "    - however, any values returned by the type can safely be read as the wildcard type\n",
+    "        - so __covariance is for reading__\n",
+    "- `<? super Number>` means we don't know what the type is, but we know it is a superclass of Number\n",
+    "    - because we know it can't be more derived than Number, then passing Number to a method like `list.add` is type-safe\n",
+    "    - however, because it might not be Number, reading Number from a method is not safe\n",
+    "        - so __contravariance is for writing__\n",
+    "- wildcards cannot express both concepts at the same time\n",
+    "\n",
+    "Note: contravariance is only for wildcards - you cannot do `<T super Number>` in a class declaration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "3a3d3fbe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.*;\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        List<Number> numbers = new ArrayList<>();\n",
+    "        addNumbers(numbers);\n",
+    "        System.out.println(numbers); // [1, 2.0]\n",
+    "    }\n",
+    "\n",
+    "    // A method that can add integers and doubles to a list.\n",
+    "    // Since we're adding to the list, we use <? super Number>.\n",
+    "    // NOTE: Using List<? extends Number> would actually be a \n",
+    "    // compile error!\n",
+    "    public static void addNumbers(List<? super Number> list) {\n",
+    "        list.add(1);\n",
+    "        list.add(2.0);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e75c8516",
+   "metadata": {},
+   "source": [
+    "# Other Generic Type Caveats\n",
+    "\n",
+    "- because T is determined by consumer of the method, you can't do something like return an Integer if T extends Number\n",
+    "- casting to T is OK as long as the thing is boxed (auto-boxing doesn't work for this case)\n",
+    "- it is illegal to use <> to specify a type for a call without something to the left of it\n",
+    "    - for type inference, unqualified is fine, but the <> operator here is special for some reason"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "c8918c74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "public class Main {\n",
+    "    public static <T extends Number> void f(T val) {\n",
+    "        System.out.println(val);\n",
+    "    }\n",
+    "    \n",
+    "    public static <T extends Integer> T g() {\n",
+    "        // return 5; // Error because T might be more specific than Integer\n",
+    "        return (T)Integer.valueOf(5); // OK\n",
+    "    }\n",
+    "    \n",
+    "    public static void main(String [] args) {\n",
+    "        f(5);\n",
+    "        \n",
+    "        Main.<Integer>g();\n",
+    "        // <Integer>f(g); // Error - there has to be something before the <>\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3468a7e9",
+   "metadata": {},
+   "source": [
+    "# Type Constraints In Class vs. Wildcard\n",
+    "\n",
+    "This example shows that the type constraint in a generic is __totally separate__ from the type constraint in a wildcard. You are not off the hook in wildcard type constraints just because you specified them in the generic, nor can you just blindlyh copy and paste them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "6d6733a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "class WildcardTest<T extends Number> {\n",
+    "    void f(T val) {\n",
+    "        System.out.println(val.intValue());\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        // Error when we do w1.f(50) because w1 is not contravariant.\n",
+    "        //WildcardTest<? extends Number> w1 = new WildcardTest<Integer>();\n",
+    "        \n",
+    "        WildcardTest<? super Integer> w1 = new WildcardTest<Integer>();\n",
+    "        w1.f(50);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main(null);"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dbca833",
+   "id": "8c76ae2b",
    "metadata": {},
    "outputs": [],
    "source": []
