--- a/java/Standard library.ipynb
+++ b/java/Standard library.ipynb
@@ -597,9 +597,158 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "43b3a02e",
+   "metadata": {},
+   "source": [
+    "# Mutex\n",
+    "\n",
+    "- You can mark a method as `synchronized` to have it lock on the class instance as the lock object.\n",
+    "    - The lock is __reentrant__, which means if the same thread locks multiple times, it will just refcount it and keep going (rather than block its own self)\n",
+    "- If the method is `static`, the class itself is the lock object.\n",
+    "- You can mark a __block__ as `synchronized` instead and pass in any object you want as the lock object.\n",
+    "- For more specialized types of locks, see the classes in `java.util.concurrent`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "b4348dbb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Critical section method locked on MutexDemo instance!\n",
+      "Critical section method locked on MutexDemo instance!\n",
+      "Critical section method locked on MutexDemo class!\n",
+      "Critical section block locked on MutextDemo instance!\n",
+      "Critical section block locked on MutextDemo instance!\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MutexDemo {\n",
+    "    synchronized void f() {\n",
+    "        System.out.println(\"Critical section method locked on MutexDemo instance!\");\n",
+    "    }\n",
+    "    \n",
+    "    static synchronized void g() {\n",
+    "        System.out.println(\"Critical section method locked on MutexDemo class!\");\n",
+    "    }\n",
+    "    \n",
+    "    void h() {\n",
+    "        // Some non-critical section code\n",
+    "        \n",
+    "        // the critical section\n",
+    "        synchronized(this) {\n",
+    "            System.out.println(\"Critical section block locked on MutextDemo instance!\");\n",
+    "        }\n",
+    "        \n",
+    "        // Some more non-critical section code\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        var m1 = new MutexDemo();\n",
+    "        var m2 = new MutexDemo();\n",
+    "        \n",
+    "        m1.f();\n",
+    "        m2.f();\n",
+    "        \n",
+    "        MutexDemo.g();\n",
+    "        \n",
+    "        m1.h();\n",
+    "        m2.h();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Main.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d033ff9",
+   "metadata": {},
+   "source": [
+    "# Wait/Notify\n",
+    "\n",
+    "- methods of `Object` that are called __within critical sections__ only\n",
+    "    - called on the __locked object__\n",
+    "- `wait()` temporarily releases the lock and puts thread in waiting state\n",
+    "    - will __sleep__ until another thread notifies it\n",
+    "    - there are overloads with __timeouts__ too\n",
+    "- `notify()` marks a random thread that is in a __waiting state__ as not in a waiting state anymore\n",
+    "    - the other thread does not resume immediately, it __still needs to wait for the lock__ to continue\n",
+    "    - the thread that called `notify()` is __continues running__\n",
+    "- `notifyAll()` is like `notify()` but it marks __all waiting__ threads as not waiting anymore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "c05e4437",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Buffer {\n",
+    "    private String content;\n",
+    "    private boolean isEmpty = true;\n",
+    "\n",
+    "    public synchronized void put(String input) {\n",
+    "        while (!isEmpty) {\n",
+    "            try {\n",
+    "                wait();\n",
+    "            } catch (InterruptedException e) { \n",
+    "                // handle interruption \n",
+    "            }\n",
+    "        }\n",
+    "        content = input;\n",
+    "        isEmpty = false;\n",
+    "        notify();\n",
+    "    }\n",
+    "\n",
+    "    public synchronized String take() {\n",
+    "        while (isEmpty) {\n",
+    "            try {\n",
+    "                wait();\n",
+    "            } catch (InterruptedException e) {\n",
+    "                // handle interruption \n",
+    "            }\n",
+    "        }\n",
+    "        isEmpty = true;\n",
+    "        notify();\n",
+    "        return content;\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0eda865e",
+   "metadata": {},
+   "source": [
+    "# Killing Threads/Futures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a42054f",
+   "metadata": {},
+   "source": [
+    "- main thread ending will not stop threads and futures\n",
+    "  - `completableFuture.cancel(true)`\n",
+    "  - `thread.interrupt()`\n",
+    "  - the thrad or future still has to check for `Thread.isInterrupted()` or `Thread.currentThread().isInterrupted()`\n",
+    "  - `System.exit()` to force kill everything immediately"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79e6a618",
+   "id": "4b64ee8c",
    "metadata": {},
    "outputs": [],
    "source": []
