--- a/java/Variables.ipynb
+++ b/java/Variables.ipynb
@@ -1181,6 +1181,8 @@
     "\n",
     "- Coercion with Mixed Types and Explicit Casting: It is possible to combine coercion and explicit casting. In the code snippet, the division of an integer `num9` and a double `num10` is coerced to a double, and then explicitly cast to an integer using `(int)`. The output demonstrates that the result is an integer.\n",
     "\n",
+    "- Casting between numeric types only works with primitives.  To work with boxed types, you need to use methods of `Number` (the superclass of the boxed types) such as `intValue()`.\n",
+    "\n",
     "Understanding casting and coercion is important in Java to ensure correct data type conversions and prevent unexpected behavior in programs."
    ]
   },
@@ -1957,12 +1959,14 @@
    "id": "4dfd37b8",
    "metadata": {},
    "source": [
-    "# Delayed Initialization"
+    "# Delayed Initialization of Local Variables\n",
+    "\n",
+    "You aren't allowed to let a local variable remain at default value without initializing it, but you can delay the initialization, initialize in a conditional to get different values, etc. as long as the compiler can tell it has a value before you're done.  This applies to regular and final variables."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 79,
    "id": "70acd2f8",
    "metadata": {
     "vscode": {
@@ -1996,6 +2000,10 @@
     "        \n",
     "        // OK\n",
     "        System.out.println(x);\n",
+    "        \n",
+    "        final int z;\n",
+    "        // System.out.println(z); // Error\n",
+    "        z = 10;\n",
     "    }\n",
     "}\n",
     "\n",
@@ -2003,9 +2011,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0ae10a43",
+   "metadata": {},
+   "source": [
+    "# Delayed Initialization of Member Variables\n",
+    "\n",
+    "- non-final variables can remain uninitialized and will be defaulted\n",
+    "- final variables have to be initialized by the end of construction\n",
+    "    - could be in c'tor body at latest\n",
+    "    - then they're locked in\n",
+    "    - can be initialized in a conditionaln way as long as exhaustive for compiler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "865d0ad3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass {\n",
+    "        final int x;\n",
+    "        final int y = 0;\n",
+    "        // final int z; // Error because final and never initialized\n",
+    "        int z; // OK because not final\n",
+    "        final int tricky;\n",
+    "        \n",
+    "        MyClass() {\n",
+    "            x = 10; // OK because this is c'tor and wasn't set yet\n",
+    "            // x = 100; // Error because set in line above\n",
+    "            \n",
+    "            // y = 1000; // Error because set in declaration\n",
+    "            \n",
+    "            f();\n",
+    "            if (x > 7) {\n",
+    "                tricky = 100;\n",
+    "            }\n",
+    "            else {\n",
+    "                tricky = 7; // Without this else, the print will be error\n",
+    "            }\n",
+    "            System.out.println(tricky);\n",
+    "            \n",
+    "            // OK because not final\n",
+    "            System.out.println(z);\n",
+    "        }\n",
+    "    \n",
+    "        void f() {\n",
+    "            // x = 200; // Error because not c'tor\n",
+    "            // z = 42;  // Error becuse not c'tor\n",
+    "        }\n",
+    "}\n",
+    "\n",
+    "public class Demo {\n",
+    "    public static void main(String[] args) {\n",
+    "        MyClass m = new MyClass();\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "Demo.main(null);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0447369c",
+   "metadata": {},
+   "source": [
+    "# Number\n",
+    "\n",
+    "`java.lang.Number` is a superclass of the boxed numeric types.\n",
+    "\n",
+    "It handles conversions (eg. `intValue()`) and is also useful for type constraints in generics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "0220fc2d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "public class Demo {\n",
+    "    public static void main(String[] args) {\n",
+    "        Integer x = 5;\n",
+    "        \n",
+    "        // Double y = (Double)x; // Error\n",
+    "        Double y = x.doubleValue();\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e3ded96",
+   "id": "e38dff26",
    "metadata": {},
    "outputs": [],
    "source": []
