--- a/java/Strings and Printing.ipynb
+++ b/java/Strings and Printing.ipynb
@@ -1118,7 +1118,45 @@
    "metadata": {},
    "source": [
     "# String as Array\n",
-    "A Java string is _not an array_ and _cannot be indexed with []_."
+    "A Java string is _not an array_ and _cannot be indexed with []_.\n",
+    "\n",
+    "However, you can __convert to a char[]__ and back (which will incur __2 copies__).\n",
+    "\n",
+    "Because strings are __immutable__, modifying the array doesn't touch the original."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "746d6695",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original String: Hello, there\n",
+      "Original String After Array Mod: Hello, there\n",
+      "New String Based on Mod: Helloo there\n"
+     ]
+    }
+   ],
+   "source": [
+    "class StringArrayDemo {\n",
+    "    public static void main(String[] args) {\n",
+    "        String s = \"Hello, there\";\n",
+    "        System.out.println(\"Original String: \" + s);\n",
+    "        \n",
+    "        char[] a = s.toCharArray();\n",
+    "        a[5] = 'o';\n",
+    "        String t = new String(a);\n",
+    "        \n",
+    "        System.out.println(\"Original String After Array Mod: \" + s);\n",
+    "        System.out.println(\"New String Based on Mod: \" + t);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "StringArrayDemo.main(null);"
    ]
   },
   {
