Adding info about lack of ref and out.

--- a/java/Functions.ipynb
+++ b/java/Functions.ipynb
@@ -751,9 +751,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a25e2194",
+   "metadata": {},
+   "source": [
+    "# Ref and Out Parameters (from C#)\n",
+    "\n",
+    "There is __no equivalent__ of this in Java."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "119e086c",
+   "id": "63c78c0f",
    "metadata": {},
    "outputs": [],
    "source": []
